Fixes release notes spinner on Safari 14 (#1379)

--- a/special-pages/pages/release-notes/app/components/ReleaseNotes.module.css
+++ b/special-pages/pages/release-notes/app/components/ReleaseNotes.module.css
@@ -69,9 +69,12 @@
 }
 
 .spinnerIcon {
-    mask: url(../../../../shared/assets/img/icons/Spinner-16.svg) no-repeat;
-    background: var(--theme-text-primary-color);
+    background: url(../../../../shared/assets/img/icons/Spinner-16.svg) no-repeat;
     animation: spinner 1500ms infinite linear;
+
+    [data-theme="dark"] & {
+        background-image: url(../../../../shared/assets/img/icons/Spinner-16-Dark.svg);
+    }
 }
 
 @keyframes spinner {
